# vision-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-models.txt  requirements.txt
.claude-flow/data/: pending-insights.jsonl
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: demo.py  streamlit_app.py
data/golden/: visual_qa.json
src/api/: main.py
src/api/routes/: ingest.py  query.py
src/evaluation/: benchmark.py  vs_text_rag.py
src/indexing/: embedder.py  pdf_renderer.py  qdrant_client.py
src/models/: answerer.py  colqwen.py
src/retrieval/: reranker.py  two_stage.py
tests/: conftest.py  test_benchmark.py  test_embedder.py  test_pdf_renderer.py  test_reranker.py  test_two_stage.py
